--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -18,7 +18,10 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 50px rgb(0 0 0 / 10%);
+    border-radius: 50px;
+    background: #f2f7f6;
+    box-shadow: 20px 20px 60px #ffffff, -20px -20px 60px #ffffff;
+    border: none !important;
   }
 
   .login-checkbox-label,
