--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,18 +1,23 @@
-.imgbox img{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-.btnbox{
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 20px;
-  input {
-    width: 200px;
+.home {
+  box-shadow: 1px 1px 5px 1px #ccc;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+
+  .imgbox img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
   }
-}
-.btsright {
-  width: 260px;
-  display: flex;
-  align-items: center;
+
+  .header {
+    display: flex;
+    margin-bottom: 20px;
+
+    .ant-input-affix-wrapper {
+      margin-left: 20px;
+      width: 200px;
+    }
+  }
+
 }
