--- a/src/pages/Share/index.scss
+++ b/src/pages/Share/index.scss
@@ -12,6 +12,18 @@
     box-shadow: 1px 1px 5px 1px #ccc;
     padding: 20px;
     border-radius: 10px;
+    background-color: #fff;
+
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      .ant-select {
+        width: 200px;
+        margin-right: 20px;
+      }
+    }
   }
 
   .left {
