--- a/src/pages/Layout/index.scss
+++ b/src/pages/Layout/index.scss
@@ -9,7 +9,7 @@
 .logo {
   width: 200px;
   height: 60px;
-  color: #fff;
+  color: #000;
   font-size: 24px;
   line-height: 60px;
   text-align: center;
@@ -25,7 +25,7 @@
   right: 0;
   top: 0;
   padding-right: 20px;
-  color: #fff;
+  color: #000;
 
   .user-name {
     margin-right: 20px;
@@ -39,5 +39,52 @@
 
 .ant-layout-header {
   padding: 0 !important;
-  // background-color: #fff;
+  background-color: #fff;
+}
+
+.ant-layout {
+  background-color: #f5f6f9;
+}
+
+.ant-menu-dark {
+  background-color: #fff;
+  color: #000;
+}
+
+.ant-menu-dark .ant-menu-item {
+  margin: 0 0 5px 5px !important;
+  width: 100%;
+  height: 50px;
+}
+
+.ant-menu-dark .ant-menu-item-selected,
+.ant-menu-item:hover {
+  background-color: #f5f6f9;
+  border-radius: 0;
+  color: #64a15e !important;
+
+  &::after {
+    content: '';
+    width: 4px;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #64a15e;
+    border-radius: 5px;
+  }
+}
+.ant-btn-primary{
+  background-color: #64a15e;
+  border-color: transparent !important;
+  &:hover {
+    background-color: #64a15e !important;
+  }
+}
+.ant-btn-dangerous{
+  background-color: #ff4d4f;
+  border-color: transparent !important;
+  &:hover {
+    background-color: #ff4d4f !important;
+  }
 }
